--- a/index.html
+++ b/index.html
@@ -51,13 +51,24 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 
     <!-- LINKS CARD -->
     <div class="links-card">
-        <h2>Explore</h2>
+    <h2>Explore</h2>
 
-        <a href="#" class="btn">Register</a>
-        <a href="#" class="btn">Events</a>
-        <a href="#" class="btn">Schedule</a>
-        <a href="#" class="btn">Rulebook</a>
-    </div>
+    <!-- INFORMATION -->
+    <a href="#" class="btn">Brochure</a>
+    <a href="#" class="btn">Rulebook</a>
+    <a href="https://instagram.com/YOURPAGE" target="_blank" class="btn">Instagram</a>
+    <a href="#" class="btn">Itinerary</a>
+
+    <!-- REGISTRATIONS -->
+    <a href="#" class="btn">Inquest Registration</a>
+    <a href="#" class="btn">Athlon Registration</a>
+    <a href="#" class="btn">Pitch Deck Registration</a>
+    <a href="#" class="btn">Thinkstrom Registration</a>
+    <a href="#" class="btn">AR/VR Workshop Registration</a>
+    <a href="#" class="btn">Drone Workshop Registration</a>
+    <a href="#" class="btn">Algorand Hackathon Registration</a>
+
+</div>
 
     <!-- VIDEO CARD -->
     <div class="video-card">
