--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     <!-- REGISTRATIONS -->
     <a href="#" class="btn">Inquest Registration</a>
     <a href="#" class="btn">Athlon Registration</a>
-    <a href="#" class="btn">Pitch Deck Registration</a>
-    <a href="#" class="btn">Thinkstrom Registration</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdt5DK4Vsu6odXt5fTEiiaDP05EuMZjqDjjSu7nPOvVomfp6g/viewform" class="btn">Pitch Deck Registration</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYGlDu6P7eTqDpOQkjdTxehrmt54iM3MNu0saX5dTExfVOtw/viewform" class="btn">Thinkstrom Registration</a>
     <a href="#" class="btn">AR/VR Workshop Registration</a>
     <a href="#" class="btn">Drone Workshop Registration</a>
     <a href="#" class="btn">Algorand Hackathon Registration</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8woVplQYb0JQ83xdisCAXNtB5fjodRLkA39dJfU_G1ItakA/viewform" class="btn">Taalverse Registration</a>
 
 </div>
 
