--- a/index.html
+++ b/index.html
@@ -50,23 +50,17 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 <div class="content-grid">
 
     <!-- LINKS CARD -->
-    <div class="links-card">
-        <h2>Explore</h2>
+<div class="links-card">
+    <h2>Explore</h2>
 
-        <a href="#" class="btn">Register</a>
-        <a href="#" class="btn">Events</a>
-        <a href="#" class="btn">Schedule</a>
-        <a href="#" class="btn">Rulebook</a>
-    </div>
+    <a href="PUT_BROCHURE_LINK" target="_blank" class="btn">Brochure</a>
 
-    <!-- VIDEO CARD -->
-    <div class="video-card">
-        <iframe
-            src="https://www.youtube.com/embed/YOUR_VIDEO_ID"
-            title="Anveshan Promo"
-            allowfullscreen>
-        </iframe>
-    </div>
+    <a href="PUT_RULEBOOK_LINK" target="_blank" class="btn">Rulebook</a>
+
+    <a href="PUT_ITINERARY_LINK" target="_blank" class="btn">Itinerary</a>
+
+    <a href="register.html" class="btn">Event Registration</a>
+</div>
 
 </div>
 
