--- a/register.html
+++ b/register.html
@@ -41,10 +41,14 @@
 Cricket Tournament
 
 https://docs.google.com/forms/d/e/1FAIpQLScISqU39U9L45NqPBcHqY2bkDpokyWt1Esdej3q6iUF1vL4sg/viewform?usp=dialog">Athleon</a>
-<a class="btn" href="https://forms.gle/hM8bgAfNVTP4uC8P8">Pitch Deck</a>
-<a class="btn" href="https://forms.gle/NthwmZdAk2coo1nP7">Thinkstrom</a>
-<a class="btn" href="PUT_ALGORAND_LINK">Algorand Hackathon</a>
-<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSf8woVplQYb0JQ83xdisCAXNtB5fjodRLkA39dJfU_G1ItakA/viewform">Taalverse (Dance competition)</a>
+<a class="btn" href="https://forms.gle/hM8bgAfNVTP4uC8P8" target="_blank"
+>Pitch Deck</a>
+<a class="btn" href="https://forms.gle/NthwmZdAk2coo1nP7" target="_blank"
+>Thinkstrom</a>
+<a class="btn" href="PUT_ALGORAND_LINK" target="_blank"
+>Algorand Hackathon</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSf8woVplQYb0JQ83xdisCAXNtB5fjodRLkA39dJfU_G1ItakA/viewform" target="_blank"
+>Taalverse (Dance competition)</a>
 
 </div>
 
@@ -53,8 +57,10 @@ https://docs.google.com/forms/d/e/1FAIpQLScISqU39U9L45NqPBcHqY2bkDpokyWt1Esdej3q
 <div class="section">
 <h2>Workshops</h2>
 
-<a class="btn" href="PUT_ARVR_LINK">AR/VR Workshop</a>
-<a class="btn" href="PUT_DRONE_LINK">Drone Workshop</a>
+<a class="btn" href="PUT_ARVR_LINK" target="_blank"
+>AR/VR Workshop</a>
+<a class="btn" href="PUT_DRONE_LINK" target="_blank"
+>Drone Workshop</a>
 
 </div>
 
