--- a/register.html
+++ b/register.html
@@ -36,11 +36,7 @@
 <h2>Competitions</h2>
 
 <a class="btn" href="PUT_INQUEST_LINK" target="_blank">Inquest</a>
-<a class="btn" href="ATHLEON 2k26
-
-Cricket Tournament
-
-https://docs.google.com/forms/d/e/1FAIpQLScISqU39U9L45NqPBcHqY2bkDpokyWt1Esdej3q6iUF1vL4sg/viewform?usp=dialog">Athleon</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLScISqU39U9L45NqPBcHqY2bkDpokyWt1Esdej3q6iUF1vL4sg/viewform?usp=dialog" target="_blank">Athleon</a>
 <a class="btn" href="https://forms.gle/hM8bgAfNVTP4uC8P8" target="_blank"
 >Pitch Deck</a>
 <a class="btn" href="https://forms.gle/NthwmZdAk2coo1nP7" target="_blank"
