--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
 <h2>Competitions</h2>
 
 <a class="btn" href="PUT_INQUEST_LINK" target="_blank">Inquest</a>
-<a class="btn" href="athlon.html">Athleon</a>
+<a class="btn" href="athleon.html">Athleon</a>
 <a class="btn" href="https://forms.gle/hM8bgAfNVTP4uC8P8" target="_blank"
 >Pitch Deck</a>
 <a class="btn" href="https://forms.gle/NthwmZdAk2coo1nP7" target="_blank"
