--- a/athleon.html
+++ b/athleon.html
@@ -30,25 +30,24 @@
 
 <h2>Sports</h2>
 
-<a class="btn" href="PUT_CRICKET_FORM_LINK" target="_blank" rel="noopener noreferrer">🏏 Cricket</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLScISqU39U9L45NqPBcHqY2bkDpokyWt1Esdej3q6iUF1vL4sg/viewform?usp=dialog" target="_blank" rel="noopener noreferrer">🏏 Cricket</a>
 
-<a class="btn" href="PUT_FUTSAL_FORM_LINK" target="_blank" rel="noopener noreferrer">⚽ Futsal</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfMljzrDQgFBuuSNTxTOrB8E--ZO710Kl_JetvGsNpOGQhnaA/viewform?usp=publish-editor" target="_blank" rel="noopener noreferrer">⚽ Futsal</a>
 
-<a class="btn" href="PUT_BASKETBALL_FORM_LINK" target="_blank" rel="noopener noreferrer">🏀 Basketball</a>
+<a class="btn" href="https://forms.gle/fusUDaD86uN5zTKUA" target="_blank" rel="noopener noreferrer">🏀 Basketball</a>
 
-<a class="btn" href="PUT_VOLLEYBALL_FORM_LINK" target="_blank" rel="noopener noreferrer">🏐 Volleyball</a>
+<a class="btn" href="https://forms.gle/fusUDaD86uN5zTKUA" target="_blank" rel="noopener noreferrer">🏐 Volleyball</a>
 
-<a class="btn" href="PUT_BADMINTON_FORM_LINK" target="_blank" rel="noopener noreferrer">🏸 Badminton</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSf7QzTpVJnABs9lazIFvwVUKqG09T4bZ76cQR6WtVyjGGNt8A/viewform" target="_blank" rel="noopener noreferrer">🏸 Badminton</a>
 
 <a class="btn" href="PUT_TABLETENNIS_FORM_LINK" target="_blank" rel="noopener noreferrer">🏓 Table Tennis</a>
 
-<a class="btn" href="PUT_CHESS_FORM_LINK" target="_blank" rel="noopener noreferrer">♟ Chess</a>
+<a class="btn" href="https://docs.google.com/forms/d/19t8ahEy4OAWsHueoj0V2bEP76XMZSBkN5f2ELezh2Wc/viewform?ts=697b7689&edit_requested=true" target="_blank" rel="noopener noreferrer">♟ Chess</a>
 
-<a class="btn" href="PUT_THROWBALL_FORM_LINK" target="_blank" rel="noopener noreferrer">🤾 Throwball</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSeYLKVwBzoRnlvCsSxYPjKQMgYrgu9c1s_akODQO-tDUGtM7g/viewform?usp=publish-editor" target="_blank" rel="noopener noreferrer">🤾 Throwball</a>
 
 </div>
 </div>
-
 </body>
 </html>
 
