--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
 <div class="section">
 <h2>Competitions</h2>
 
-<a class="btn" href="PUT_INQUEST_LINK" target="_blank">Inquest</a>
+<a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSeyeRErpmnFHNDYCVfFsJX3C5w_06R9rgKTBNbA91xCyiiiUQ/viewform" target="_blank">Inquest</a>
 <a class="btn" href="athleon.html">Athleon</a>
 <a class="btn" href="https://forms.gle/hM8bgAfNVTP4uC8P8" target="_blank"
 >Pitch Deck</a>
