--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 
     <a href="PUT_RULEBOOK_LINK" target="_blank" class="btn">Rulebook</a>
 
-    <a href="PUT_ITINERARY_LINK" target="_blank" class="btn">Itinerary</a>
+    <a href="assets/itinerary.pdf" target="_blank" class="btn">Itinerary</a>
 
     <a href="register.html" class="btn">Event Registration</a>
 </div>
