--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
 
     <img src="assets/logo.png" class="logo" alt="Anveshan Logo">
 
-    <h1>ANVESHAN</h1>
+    <h1>ANVESHAN 2026</h1>
 
     <p class="desc">
         Event Registrations
