--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     </p>
 
     <div class="socials">
-        <a href="https://instagram.com/" target="_blank">
+        <a href="https://www.instagram.com/anveshan_2026" target="_blank">
             <i class="fa-brands fa-instagram"></i>
         </a>
 
-        <a href="https://linkedin.com/" target="_blank">
+        <a href="https://www.linkedin.com/company/anveshan-2025/about/" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
         </a>
 
-        <a href="https://sithyd.edu.in/" target="_blank" class="site-link">
+        <a href="Sricharan1626.github.io/ANVESHAN" target="_blank" class="site-link">
             <i class="fa-solid fa-globe"></i>
         </a>
     </div>
