--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
             <i class="fa-brands fa-linkedin"></i>
         </a>
 
-        <a href="Sricharan1626.github.io/ANVESHAN" target="_blank" class="site-link">
+        <a href="https://sricharan1626.github.io/ANVESHAN/" target="_blank" class="site-link">
             <i class="fa-solid fa-globe"></i>
         </a>
     </div>
